# dopple

./: .gitignore
FaceServer/: AlignmentVis.cs  CombinedFace.cs  FaceMeshService.cs  FaceServer.csproj  FaceServer.sln  GLObjects.cs  GLView.Designer.cs  GLView.cs  MainForm.cs  MainWindow.Designer.cs  MainWindow.cs  OctTree.cs  Origin.cs  PtCloudAligner.cs  PtMesh.cs  Recording.cs  TcpLib.cs  ThreeDPointVis.cs  TwoDPointVis.cs  UDPer.cs  UpgradeLog.htm  ValueCtrl.Designer.cs  ValueCtrl.cs  VideoFrame.cs  VideoMesh.cs  VideoViewer.Designer.cs  VideoViewer.cs  app.config  packages.config  shane.nb  shane3d.nb
ICP/: ICPTest.sln
IOSApp/: Dopple.sln  Metadata.xml  README.md
KdTreeLib/: HyperRect.cs  IKdTree.cs  IPriorityQueue.cs  KdTree.cs  KdTreeLib.csproj  KdTreeNode.cs  NearestNeighbourList.cs  PriorityQueue.cs
MIConvexHull/: Constants.cs  ConvexHull.cs  ConvexHullCreationResultOutcome.cs  ConvexHullGenerationException.cs  IVertex.cs  MIConvexHull.csproj  Triangulation.cs
MeshDecimator/: BoneWeight.cs  Logging.cs  Mesh.cs  MeshDecimation.cs  MeshDecimator.csproj
Planes/: Aligner.cs  App.config  App.xaml  App.xaml.cs  AttitudeVis.cs  CameraTrackVis.cs  DepthPtsVis.cs  DepthRenderer.cs  DepthVis.cs  DeviceMotionVis.cs  GlObjects.cs  GridVis.cs  MainWindow.xaml  MainWindow.xaml.cs  MatchVis.cs  MatchesVis.cs  OpenCV.cs  Planes.csproj  Planes.sln  PtCloudAligner.cs  PtsRenderer.cs  (+8 more)
ptslib/: Alignment.cpp  CMakeLists.txt  Depth.cpp  OctGrid.h  OctTree.cpp  OctTreeLoc.cpp  OctTreeLoc.h  Planes.cpp  PtsLib.h  World.cpp  pch.h  ptslib.vcxproj  ptslib.vcxproj.filters
(+174 files in other folders)
